# Robs_streaming_console

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_old.md  CLAUDE.md  CODE_REVIEW.html  Codex.md  Directory.Build.props  HANDOFF.md  HANDOFF_history.md  MISTAKES.md  README.md  Steaming.slnx  _db_query.csx  _skia_check.csx  hypetrain.md  kick_api_docs.txt  kick_bridge_contract.md  layout_Raid.json  winui_build.binlog  youtube.md
.codex/: AGENTS.md
Steaming.Application/: Steaming.Application.csproj
Steaming.Application/Models/: FaceTrackingModels.cs  VrmModel.cs
Steaming.Application/Services/: AnalyticsCollectorService.cs  AppSoundPlayer.cs  AvatarRenderService.cs  CameraCaptureService.cs  ChatTtsService.cs  FaceRetargetService.cs  FaceTrackingDiagnosticsService.cs  FaceTrackingPersistenceService.cs  FaceTrackingService.cs  IFaceTrackingProvider.cs  IntegrationConfigService.cs  MediaPipeFaceProvider.cs  MicCaptureService.cs  MusicLibraryService.cs  MusicOverlayDispatcher.cs  MusicPlayerService.cs  NdiSendService.cs  PlatformCredentialService.cs  PlatformSessionFlowService.cs  ReplayFrameService.cs  VrmLoaderService.cs
Steaming.Application/ViewModels/: AlertEditorViewModel.cs  AvatarViewModel.cs  ChatMessageItem.cs  CustomAlertItem.cs  GoalRow.cs  KickTokenResponse.cs  LabelRow.cs  LyricPreviewLine.cs  MainViewModel.cs  MusicViewModel.cs  RelayCommand.cs  RewardItem.cs  ServiceStatusItem.cs  ViewModelBase.cs
Steaming.Core/: EventBus.cs  Steaming.Core.csproj  VersionInfo.cs
Steaming.Core/Auth/: OAuthService.cs  TokenStore.cs
Steaming.Core/Configuration/: PlatformAuthConfig.cs  PlatformAuthSecrets.Local.example.cs  PlatformAuthSecrets.cs
Steaming.Core/Ipc/: AlertPayload.cs  ChatOverlaySettingsPayload.cs  ChatPayload.cs  PipeHelloPayload.cs  PipeMessageType.cs  PluginPipeServer.cs
Steaming.Core/Models/: AlertLayout.cs  ChannelReward.cs  LrcLyrics.cs  MusicTrack.cs  StreamEvent.cs
Steaming.Core/Protos/: youtube_stream_list.proto
Steaming.Data/: ActivityRepository.cs  AnalyticsRepository.cs  Steaming.Data.csproj
Steaming.Web/: Steaming.Web.csproj
Steaming.WinUI/: AlertEditorWindow.xaml  AlertEditorWindow.xaml.cs  App.xaml  App.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SplashWindow.xaml  SplashWindow.xaml.cs  Steaming.WinUI.csproj  WinUIDispatcherService.cs  app.manifest
_dbquery/: DbQuery.csproj  Program.cs
dbread/: Program.cs
docs/: PLAN_engagement_meter.md  PLAN_experimental_embedded_kick_bridge.md  PLAN_installer_updater.md  steaming.md
installer/: README.md  steaming.nsi
kick_bridge/: kick_bridge.py
obs/obs-plugintemplate/: CMakeLists.txt  buildspec.json
obs/obs-plugintemplate/data/locale/: en-US.ini
obs/obs-plugintemplate/src/: alert_source.cpp  alert_source.h  chat_source.cpp  chat_source.h  emoji_rain_source.cpp  emoji_rain_source.h  goal_source.cpp  goal_source.h  label_source.cpp  label_source.h  layout_renderer.cpp  layout_renderer.h  layout_types.h  lyrics_source.cpp  lyrics_source.h  music_render.cpp  music_render.h  music_source.cpp  music_source.h  pipe_client.cpp  pipe_client.h  plugin-main.cpp  renderer.cpp  renderer.h
(+67 files in other folders)
